# nifty-ls

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGES.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml  wheels.yml
ci/: Dockerfile  Jenkinsfile
scripts/: bench.py  compare.py  sweep.py
src/nifty_ls/: __init__.py  astropy.py  backends.py  chi2_cuda_helper.cu  chi2_helpers.cpp  chi2_helpers.hpp  core.py  cpu.cpp  cpu_helpers.cpp  cpu_helpers.hpp  cuda_helper.cu  cufinufft.py  cufinufft_CUDA.py  cufinufft_chi2.py  cufinufft_chi2_CUDA.py  cufinufft_traits.hpp  finufft.py  finufft_chi2.py  finufft_chi2_heterobatch.py  finufft_chi2_heterobatch_helpers.cpp  finufft_heterobatch.py  finufft_heterobatch_helpers.cpp  finufft_wrapper.hpp  gpu_helper.cu  heterobatch_helpers.cpp  utils.py  utils_helpers.hpp
src/nifty_ls/test_helpers/: utils.py
tests/: test_freethreaded.py  test_heterobatch.py  test_ls.py  test_perf.py
